<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.sfu.Navy.walkinggroup.SignUpActivity">

    <EditText
        android:id="@+id/signup_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/signup_hint_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/signup_hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_edit_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_edit_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/signup_hint_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_btn_register"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signup_edit_pw"
        android:layout_marginTop="40dp"
        android:text="@string/btn_str_register"/>

</RelativeLayout>
